fix: user navigation on small mobile

--- a/index.css
+++ b/index.css
@@ -187,6 +187,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 20px;
 }
 
 @media (min-width: 241px) {
@@ -194,6 +195,8 @@ body {
     flex-direction: row;
     justify-content: flex-start;
     flex-wrap: wrap;
+
+    margin-top: 0;
   }
 }
 
@@ -206,7 +209,6 @@ body {
 
 .user-nav__list-item {
   margin-right: 10px;
-  padding-top: 20px;
 }
 @media (min-width: 1024px) {
   .user-nav__list-item {
